multiple users registration added

--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task Management Dashboard UI</title>
+    <title>Task Management Dashboard UI
+      <!-- <script>localStorage.getItem('uname');</script> -->
+    </title>
     <link rel="stylesheet" href="admin_home.css" />
   </head>
   <body>
@@ -233,5 +235,6 @@
         </div>
       <!-- right bar ends -->
     </div>
+    <script src="admin_home.js"></script>
   </body>
 </html>
