--- a/user/userindex.html
+++ b/user/userindex.html
@@ -18,27 +18,21 @@
           <ul class="action-list">
             <li class="item">
               <img class="feather feather-inbox" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/inbox.svg" alt="" />
-              <span>Inbox</span>
+              <a href="userindex.html">New Task</a>
             </li>
             <li class="item">
               <img class="feather feather-star" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/star.svg" alt="" />
-              <span> Today</span>
+              <a href="inprogress.html">inprogress Task</a>
             </li>
             <li class="item">
               <img class="feather feather-calendar" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/calender.svg" alt="" />
-              <span>Upcoming</span>
+              <a href="complted.html">Completed Task</a>
             </li>
             <li class="item">
               <img class="feather feather-hash" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/hash.svg" alt="" />
-              <span>Important</span>
+              <a href="">logout</a>
             </li>
-            <li class="item">
-              <img class="feather feather-users" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/users.svg" alt="" />
-              <span>Meetings</span>
-            </li>
-            <li class="item">
-              <img class="feather feather-trash" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/trash.svg" alt="" />
-              <span>Trash</span>
+            
             </li>
           </ul>
         </div>
@@ -78,7 +72,7 @@
                     <!-- <img class="feather feather-users" src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/svg/users.svg" alt="" /> -->
                   </a>
                 </div>
-                <div class="header">New Task</div>
+                <div class="header" >New Task</div>
                     <div class="right-content">
                       <div class="task-box yellow">
                         <div class="description-task">
