--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -53,14 +53,14 @@
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-1" checked />
             <label for="item-1">
-              <span class="label-text">Dashboard Design Implementation</span>
+              <span class="label-text" id="item1">Dashboard Design Implementation</span>
             </label>
             <span class="tag approved">Approved</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-2" checked />
             <label for="item-2">
-              <span class="label-text">Create a userflow</span>
+              <span class="label-text" id="item2">Create a userflow</span>
             </label>
             <span class="tag progress">In Progress</span>
           </div>
@@ -141,15 +141,18 @@
               </div>
               <div class="task-box blue">
                 <div class="description-task">
-                  <div class="time">10:00 - 11:00 AM</div>
+                  <div class="time" ><p id="time">10:00 - 11:00 AM</p></div>
                   <div class="task-name" ><p id="taskname"></p></div>
+                  <div class="task-name" ><p id="taskdetails"></p></div>
+                  <div class="time"><p id="rate"></p></div>
+                  
                 </div>
                 <div class="more-button"></div>
-                <div class="members">
+                <!-- <div class="members">
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img5.jpg" alt="member" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img6.jpg" alt="member-2" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img7.jpg" alt="member-3" />
-                </div>
+                </div> -->
               </div>
               <div class="task-box red">
                 <div class="description-task">
