--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -53,14 +53,14 @@
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-1" checked />
             <label for="item-1">
-              <span class="label-text" id="item1">Dashboard Design Implementation</span>
+              <span class="label-text" id="item1"></span>
             </label>
             <span class="tag approved">Approved</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-2" checked />
             <label for="item-2">
-              <span class="label-text" id="item2">Create a userflow</span>
+              <span class="label-text" id="item2"></span>
             </label>
             <span class="tag progress">In Progress</span>
           </div>
