--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -19,7 +19,7 @@
           
           <ul class="action-list">
             <li class="item">
-              <img class="feather feather-inbox"  src="/Users/rohanghevariya/Desktop/TaskManagerJS/svg/inbox.svg" alt="" />
+              <img class="feather feather-inbox"  src="/Users/raviradadiya/Desktop/JSNew/TaskManagerJS/svg/inbox.svg" alt="" />
               <span onclick="location.replace('admin_home.html')">Home</span>
             </li>
             <li class="item">
@@ -94,28 +94,28 @@
           </div>
           <div class="header upcoming">Completed Projects</div>
           <div class="task">
-            <input class="task-item" name="task" type="checkbox" id="item-7" />
+            <!-- <input class="task-item" name="task" type="checkbox" id="item-7" /> -->
             <label for="item-7">
               <span class="label-text">Dashboard Design Implementation</span>
             </label>
             <span class="tag waiting">Waiting</span>
           </div>
           <div class="task">
-            <input class="task-item" name="task" type="checkbox" id="item-8" />
+            <!-- <input class="task-item" name="task" type="checkbox" id="item-8" /> -->
             <label for="item-8">
               <span class="label-text">Create a userflow</span>
             </label>
             <span class="tag waiting">Waiting</span>
           </div>
           <div class="task">
-            <input class="task-item" name="task" type="checkbox" id="item-9" />
+            <!-- <input class="task-item" name="task" type="checkbox" id="item-9" /> -->
             <label for="item-9">
               <span class="label-text">Application Implementation</span>
             </label>
             <span class="tag waiting">Waiting</span>
           </div>
           <div class="task">
-            <input class="task-item" name="task" type="checkbox" id="item-10" />
+            <!-- <input class="task-item" name="task" type="checkbox" id="item-10" /> -->
             <label for="item-10">
               <span class="label-text">Create a Dashboard Design</span>
             </label>
@@ -160,12 +160,12 @@
                   <div class="task-name">Team Meeting</div>
                 </div>
                 <div class="more-button"></div>
-                <div class="members">
+                <!-- <div class="members">
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img1.jpg" alt="member" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img2.jpg" alt="member-2" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img3.jpg" alt="member-3" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img4.jpg" alt="member-4" />
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="bottom-part">
