--- a/admin/admin_managetasks.html
+++ b/admin/admin_managetasks.html
@@ -19,7 +19,7 @@
           
           <ul class="action-list">
             <li class="item">
-              <img class="feather feather-inbox"  src="/Users/rohanghevariya/Desktop/TaskManagerJS/svg/inbox.svg" alt="" />
+              <img class="feather feather-inbox"  src="/Users/raviradadiya/Desktop/JSNew/TaskManagerJS/svg/inbox.svg" alt="" />
               <span onclick="location.replace('admin_home.html')">Home</span>
             </li>
             <li class="item">
@@ -66,42 +66,36 @@
             <label for="item-1">
               <span class="label-text">Dashboard Design Implementation</span>
             </label>
-            <span class="tag approved">Approved</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-2" checked />
             <label for="item-2">
               <span class="label-text">Create a userflow</span>
             </label>
-            <span class="tag progress">In Progress</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-3" />
             <label for="item-3">
               <span class="label-text">Application Implementation</span>
             </label>
-            <span class="tag review">In Review</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-4" />
             <label for="item-4">
               <span class="label-text">Create a Dashboard Design</span>
             </label>
-            <span class="tag progress">In Progress</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-5" />
             <label for="item-5">
               <span class="label-text">Create a Web Application Design</span>
             </label>
-            <span class="tag approved">Approved</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-6" />
             <label for="item-6">
               <span class="label-text">Interactive Design</span>
             </label>
-            <span class="tag review">In Review</span>
           </div>
           <div class="header upcoming">Completed Projects</div>
           <div class="task">
@@ -109,28 +103,24 @@
             <label for="item-7">
               <span class="label-text">Dashboard Design Implementation</span>
             </label>
-            <span class="tag waiting">Waiting</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-8" />
             <label for="item-8">
               <span class="label-text">Create a userflow</span>
             </label>
-            <span class="tag waiting">Waiting</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-9" />
             <label for="item-9">
               <span class="label-text">Application Implementation</span>
             </label>
-            <span class="tag waiting">Waiting</span>
           </div>
           <div class="task">
             <input class="task-item" name="task" type="checkbox" id="item-10" />
             <label for="item-10">
               <span class="label-text">Create a Dashboard Design</span>
             </label>
-            <span class="tag waiting">Waiting</span>
           </div>
         </div>
         <!-- tasks wrapper ends -->
@@ -153,12 +143,12 @@
                   <div class="task-name">Product Review</div>
                 </div>
                 <div class="more-button"></div>
-                <div class="members">
+                <!-- <div class="members">
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img1.jpg" alt="member" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img2.jpg" alt="member-2" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img3.jpg" alt="member-3" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img4.jpg" alt="member-4" />
-                </div>
+                </div> -->
               </div>
               <div class="task-box blue">
                 <div class="description-task">
@@ -166,11 +156,11 @@
                   <div class="task-name">Design Meeting</div>
                 </div>
                 <div class="more-button"></div>
-                <div class="members">
+                <!-- <div class="members">
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img5.jpg" alt="member" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img6.jpg" alt="member-2" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img7.jpg" alt="member-3" />
-                </div>
+                </div> -->
               </div>
               <div class="task-box red">
                 <div class="description-task">
@@ -178,43 +168,12 @@
                   <div class="task-name">Team Meeting</div>
                 </div>
                 <div class="more-button"></div>
-                <div class="members">
+                <!-- <div class="members">
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img1.jpg" alt="member" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img2.jpg" alt="member-2" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img3.jpg" alt="member-3" />
                   <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img4.jpg" alt="member-4" />
-                </div>
-              </div>
-            </div>
-            <div class="bottom-part">
-              <a class="btnc" href="#divone"><div class="text">Create</div></a>
-            </div>
-            <div class="overlay" id="divone">
-              <div class="wrapper">
-                <h2>Create new project</h2>
-                <a href="#" class="close">
-                  &times;
-                </a>
-                <div class="content">
-                  <div class="container">
-                    <form>
-                      <label>Title</label>
-                      <input type="text" placeholder="Task Title">
-                      <label>Task Details</label>
-                      <input type="text" placeholder="Task Details">
-                      <label for="start">Start date:</label>
-                      <input type="date" id="start" name="project-start" value="2022-07-22" min="2018-01-01" max="2025-12-31">
-                    </br>
-                      <label for="start">End date:</label>
-                      <input type="date" id="end" name="project-end" value="2022-07-22" min="2018-01-01" max="2025-12-31">
-                    </br>
-                    </br>
-                      <label>Hourly Pay Rate</label>
-                      <input type="text" placeholder="Hourly Pay Rate">
-                      <input type="submit" value="submit">
-                    </form>
-                  </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
