asssign field added

--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -128,7 +128,7 @@
                   <div class="time" ><p id="time">10:00 - 11:00 AM</p></div>
                   <div class="task-name" ><p id="taskname"></p></div>
                   <div class="task-name" ><p id="taskdetails"></p></div>
-                  <div class="time"><p id="rate"></p></div>
+                  <div class="assign-to"><p id="assName"></p></div>
                   
                 </div>
                 <div class="more-button"></div>
@@ -172,6 +172,8 @@
                       <input type="datetime-local" id="duedate">
                       <p>Details</p>
                       <textarea rows="8" id="taskdesc"></textarea>
+                      <p>Assign To</p>
+                      <input type="text" autocomplete="off" placeholder="Email of user" id="assignTo">
                       <p>Hourly Pay Rate</p>
                         <input type="text" id="payrate" placeholder="Hourly Pay Rate" data-payrate>
                       <div class="button-cluster right">
