Admin side and user side changes done

--- a/admin/admin_home.html
+++ b/admin/admin_home.html
@@ -66,37 +66,7 @@
         </div>
         <div class="header">Task Details</div>
             <div class="right-content">
-              <div class="feed" id="feed">
-                
-              </div>
-              <div class="task-box blue">
-                <div class="description-task">
-                  <div class="time" ><p id="time">10:00 - 11:00 AM</p></div>
-                  <div class="task-name" ><p id="taskname"></p></div>
-                  <div class="task-name" ><p id="taskdetails"></p></div>
-                  <div class="assign-to"><p id="assName"></p></div>
-                  
-                </div>
-                <div class="more-button"></div>
-                <!-- <div class="members">
-                  <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img5.jpg" alt="member" />
-                  <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img6.jpg" alt="member-2" />
-                  <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img7.jpg" alt="member-3" />
-                </div> -->
-              </div>
-              <div class="task-box red">
-                <div class="description-task">
-                  <div class="time">01:00 - 02:00 PM</div>
-                  <div class="task-name">Team Meeting</div>
-                </div>
-                <div class="more-button"></div>
-                <!-- <div class="members">
-                  <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img1.jpg" alt="member" />
-                  <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img2.jpg" alt="member-2" />
-                  <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img3.jpg" alt="member-3" />
-                  <img src="/Users/raviradadiya/Desktop/JS/TaskManagerJS/images/img4.jpg" alt="member-4" />
-                </div> -->
-              </div>
+              <ul class="feed"> </ul>
             </div>
             <div class="bottom-part">
               <a class="btnc" href="#divone"><div class="text">Create</div></a>
