--- a/user/user_home.html
+++ b/user/user_home.html
@@ -40,41 +40,16 @@
 
       <!-- page content starts -->
       <div class="page-content">
-        <div class="header">Recent Projects</div>
+        <div class="header">Recent Tasks</div>
         <div class="content-categories"></div>
         <!-- tasks wrapper starts -->
         <div class="tasks-wrapper">
-            <div class="right-content">
-                <div class="task-box yellow">
-                  <div class="description-task">
-                    <div class="time">08:00 - 09:00 AM</div>
-                    <div class="task-name">Product Review</div> 
-                    </br> </br>
-                    <button class="button-23">Approve</button>
-                    <button class="button-23">Decline</button>
-                  </div>
-                </div>
-                <div class="task-box blue">
-                  <div class="description-task">
-                    <div class="time">10:00 - 11:00 AM</div>
-                    <div class="task-name">Design Meeting</div>
-                    </br> </br>
-                    <button class="button-23">Approve</button>
-                    <button class="button-23">Decline</button>
-                  </div>
-                </div>
-                <div class="task-box red">
-                  <div class="description-task">
-                    <div class="time">01:00 - 02:00 PM</div>
-                    <div class="task-name">Team Meeting</div>
-                    </br> </br>
-                    <button class="button-23">Approve</button>
-                    <button class="button-23">Decline</button>
-                  </div>
-                </div>
-              </div>
+          <div class="right-content">
+            <ul class="feed"> </ul>
+          </div>
         </div>
         <!-- tasks wrapper ends -->
     </div>
+    <script src="user_home.js"></script>
   </body>
 </html>
