--- a/user/user_login.html
+++ b/user/user_login.html
@@ -15,7 +15,7 @@
     <!--<title>Login & Registration Form</title>-->
 </head>
 <body>
-    <form action="admin_home.html">
+    <form action="user_home.html">
     <div class="container">
         <div class="forms">
             <div class="form login">
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="input-field button">
-                        <input href="user_home.html" type="submit" value="Login" onclick="checkData()" >
+                        <input  type="submit" value="Login" onclick="checkData(),location.replace('user_home.html')" >
                     </div>
                 </form>
 
