--- a/user/inprogress.html
+++ b/user/inprogress.html
@@ -44,34 +44,9 @@
         <div class="content-categories"></div>
         <!-- tasks wrapper starts -->
         <div class="tasks-wrapper">
-            <div class="right-content">
-
-                <div class="task-box yellow">
-                    <div class="description-task">
-                      <div class="time">08:00 - 09:00 AM</div>
-                      <div class="task-name">Product Review</div> 
-                      </br> </br>
-                      <a class="button-23" href="#divone">Completed</a>
-                    </div>
-                  </div>
-
-                <div class="task-box blue">
-                  <div class="description-task">
-                    <div class="time">10:00 - 11:00 AM</div>
-                    <div class="task-name">Design Meeting</div>
-                    </br> </br>
-                    <a class="button-23" href="#divone">Completed</a>
-                  </div>
-                </div>
-                <div class="task-box red">
-                  <div class="description-task">
-                    <div class="time">01:00 - 02:00 PM</div>
-                    <div class="task-name">Team Meeting</div>
-                    </br> </br>
-                    <a class="button-23" href="#divone">Completed</a>
-                  </div>
-                </div>
-              </div>
+          <div class="right-content">
+            <ul class="feed"> </ul>
+          </div>
         </div>
 
         <div class="overlay" id="divone">
@@ -95,5 +70,6 @@
           </div>
         <!-- tasks wrapper ends -->
     </div>
+    <script src="user_inprogress.js"></script>
   </body>
 </html>
