--- a/user/inprogress.html
+++ b/user/inprogress.html
@@ -59,10 +59,12 @@
                 <div class="container">
                   <form>
                     <label>Title</label>
-                    <input type="text" placeholder="Task Title">
+                    <label  id="completedTaskTitle"></label>
+                    <label>Date</label><br><br>
+                    <input type="datetime-local" id="dateCompleted"/></br><br>
                     <label>Total number of hours you worked</label>
-                    <input type="text" placeholder="Number of hours">
-                    <button class="button-23">Submit</button>
+                    <input type="text" id="hoursOfWork" placeholder="Number of hours">
+                    <button class="button-23"  id="btnSubmit">Submit</button>
                   </form>
                 </div>
               </div>
