--- a/user/completed.html
+++ b/user/completed.html
@@ -45,29 +45,10 @@
         <!-- tasks wrapper starts -->
         <div class="tasks-wrapper">
             <div class="right-content">
-
-                <div class="task-box yellow">
-                    <div class="description-task">
-                      <div class="time">08:00 - 09:00 AM</div>
-                      <div class="task-name">Product Review</div> 
-                    </div>
-                  </div>
-
-                <div class="task-box blue">
-                  <div class="description-task">
-                    <div class="time">10:00 - 11:00 AM</div>
-                    <div class="task-name">Design Meeting</div>
-                  </div>
-                </div>
-                <div class="task-box red">
-                  <div class="description-task">
-                    <div class="time">01:00 - 02:00 PM</div>
-                    <div class="task-name">Team Meeting</div>
-                  </div>
-                </div>
-              </div>
+              <ul class="feed"> </ul>
         </div>
         <!-- tasks wrapper ends -->
     </div>
+    <script src="user_completed.js"></script>
   </body>
 </html>
